feat: フロントエンドをバックエンドAPIを利用するように再設計 このコミットは、Streamlitフロントエンド（app.py）を、新しいFastAPIバックエンドの純粋なクライアントとして動作するように、完全にリファクタリングする。 すべての直接的なデータベース接続、データ処理、およびAIとの対話ロジックは、フロントエンドアプリケーションから削除された。代わりに、現在は以下の効率化された機能を実行する： ユーザーの自然言語クエリを捕捉する。 POSTリクエストを介して、クエリをバックエンドAPIの/analyzeエンドポイントに送信する。 生成されたSQLと結果データを含むJSONレスポンスを受信する。 結果をユーザーフレンドリーな形式（メトリックまたはデータフレーム）で描画する。 この変更は、プレゼンテーション層（Streamlit）とビジネスロジック/データ層（FastAPI + Supabase）との間に明確な関心の分離を生み出すことにより、堅牢で、スケーラブルで、保守性の高い3層アーキテクチャへの移行を完了させる。フロントエンドは、これにより大幅にシンプルかつ高速になり、ユーザーインタラクションにのみ専念する。

--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,11 @@ venv.bak/
 .env
 
 # Database files
-# 自動でcsvをとってこようとしたが、自動ボット拒否される機構があったため、素直にdbをGitに持つことにした
-# *.db 
+*.db 
 *.sqlite3
 
 # Streamlit
 .streamlit/
+
+# Backend secrets
+backend/.env
