fix(deps): Add missing psycopg2-binary to frontend requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ streamlit
 pandas
 numpy
 requests
-google-generativeai # ADD THIS BACK
-python-dotenv       # Add for local testing
+google-generativeai
+python-dotenv
+psycopg2-binary
